--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
 body {
     font-family: 'Courier New', Courier, monospace;
 }
+
+.card {
+    color: white;
+    background-color: rgb(53, 49, 49);
+    outline: rgb(126, 126, 224) 6px groove;
+    padding: 10px;
+    margin: 20px;
+}
